Fix centering and spacing from my last commit

--- a/src/components/StartExperimenting/StartExperimenting.module.scss
+++ b/src/components/StartExperimenting/StartExperimenting.module.scss
@@ -87,5 +87,7 @@
     padding: 42px 0;
     background-color: var(--cds-background-brand);
     color: #ffffff;
+    margin: auto;
+    text-align: center;
   }
 }
